<resources>
    <string name="app_name">有聊</string>
    <string name="format_version_name">版本号：%s</string>
    <string name="test_version_name">版本号：1.0.0</string>
    <string name="login_welcome">登陆，开启你的有聊之旅吧～</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="register_welcome">创建一个新账号吧～</string>
    <string name="username_must_not_empty">账号不能为空！</string>
    <string name="username_length_error">账号长度必须在6位到16位之间！</string>
    <string name="password_must_not_empty">密码不能为空！</string>
    <string name="password_length_error">密码长度必须在6位到16位之间！</string>
    <string name="login_failure">登陆失败！</string>
    <string name="username_already_exist">该用户名已经存在，请重新注册！</string>
    <string name="register_failure">注册失败，请重新注册！</string>
    <string name="register_success">注册成功，赶快去登陆吧！</string>
    <string name="dialog_tips">提示！</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="chat">聊天</string>
    <string name="contacts">联系人</string>
    <string name="topic">话题</string>
    <string name="me">我的</string>
    <string name="without_signature">你还没有个性签名哦～</string>
    <string name="friend_without_signature">还没有设置个性签名</string>
    <string name="my_focus">我的关注（只显示关注人的话题）</string>
    <string name="topic_center">话题中心</string>
    <string name="my_photos">我的相册</string>
    <string name="my_collection">我的收藏</string>
    <string name="operate">操作</string>
    <string name="about_author">关于作者</string>
    <string name="logout">退出登陆</string>
    <string name="test_nickname">拥抱生活</string>
    <string name="test_extra">我是拥抱生活</string>
    <string name="test_signature">还没有个性签名哦～</string>
    <string name="test_username">Zeroami</string>
    <string name="format_username">账号：%s</string>
    <string name="format_nickname">昵称：%s</string>
    <string name="scan_qrcode">扫一扫</string>
    <string name="add_friend">添加朋友</string>
    <string name="add_group">添加群聊</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="settings">设置</string>
    <string name="my_publish_topic">我发起的话题</string>
    <string name="my_join_topic">我参与的话题</string>
    <string name="new_friend">新的朋友</string>
    <string name="my_group">我的群聊</string>
    <string name="robot_zero">机器人小零</string>
    <string name="format_default_nickname">新用户%s</string>
    <string name="username">账号</string>
    <string name="nickname">昵称</string>
    <string name="format_remain_word">还剩下%s个字</string>
    <string name="hint_username">请输入账号</string>
    <string name="hint_signature">请输入个性签名</string>
    <string name="hint_nickname">请输入昵称</string>
    <string name="hint_extra">请输入额外信息</string>
    <string name="test_title">我是标题</string>
    <string name="persontal_info">个人信息</string>
    <string name="abandon_persontal_info_change">放弃个人信息修改</string>
    <string name="personal_info_not_need_change">个人信息没有改变，不需要修改！</string>
    <string name="nickname_length_error">昵称长度必须在6位到16位之间！</string>
    <string name="signature_length_error">个性签名必须在120字之内！</string>
    <string name="persontal_info_change_success">个人信息修改成功</string>
    <string name="persontal_info_change_error">个人信息修改失败</string>
    <string name="change_search">切换搜索</string>
    <string name="input_empry_error">输入不能为空！</string>
    <string name="search_result_is_empty">没有搜索到结果</string>
    <string name="operate_failure">操作失败！</string>
    <string name="change_to_username_search">切换到账号搜索</string>
    <string name="change_to_nickname_search">切换到昵称搜索</string>
    <string name="load_failure">加载失败！</string>
    <string name="save_change">保存修改</string>
    <string name="friend_detail">朋友详情</string>
    <string name="notification_receive_add_request">收到来自%s的一条好友请求</string>
    <string name="add_extra">添加额外信息</string>
    <string name="format_extra">我是%s</string>
    <string name="send_add_request_success">发送添加请求成功</string>
    <string name="send_add_request_error">发送添加请求失败</string>
    <string name="send_message">发信息</string>
    <string name="already_send_add_request">已经发送添加请求</string>
    <string name="test_unread_count">9</string>
    <string name="agree">同意</string>
    <string name="check_update">检查更新</string>
    <string name="exit_app">退出应用</string>
    <string name="already_agree">已同意</string>
    <string name="format_agree_add_request">%s同意了你的请求</string>
    <string name="please_check_network">请检查你的网络连接是否开启</string>
    <string name="send">发送</string>
    <string name="delete_friend">删除朋友</string>
    <string name="delete_friend_success">删除朋友成功</string>
    <string name="delete_friend_failure">删除朋友失败</string>
    <string name="test_time">2016-01-01 00:00:00</string>
    <string name="test_message">明月几时有？把酒问青天。不知天上宫阙，今夕是何年。我欲乘风归去，又恐琼楼玉宇，高处不胜寒。起舞弄清影，何似在人间？转朱阁，低绮户，照无眠。不应有恨，何事长向别时圆？人有悲欢离合，月有阴晴圆缺，此事古难全。但愿人长久，千里共婵娟。</string>
    <!--<string name="test_message">明月几时有？把酒问青天。</string>-->
    <string name="send_failure">发送失败</string>
    <string name="file_text">[文件]</string>
    <string name="image_text">[图片]</string>
    <string name="audio_text">[语音]</string>
    <string name="video_text">[视频]</string>
    <string name="format_last_message" formatted="false">%s：%s</string>
    <string name="new_friend_default_message">我们已经是朋友了，开始聊天吧～</string>
    <string name="notice_not_friend">你们还不是朋友，聊天时请注意！</string>
    <string name="transition_share_image">transition_share_image</string>
</resources>
