<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_topic_center"
            android:checkable="false"
            android:icon="@mipmap/ic_topic"
            android:title="@string/topic_center"/>
        <item
            android:id="@+id/nav_my_focus"
            android:checkable="false"
            android:icon="@mipmap/ic_focus"
            android:title="@string/my_focus"/>
        <item
            android:id="@+id/nav_my_photos"
            android:checkable="false"
            android:icon="@mipmap/ic_photo"
            android:title="@string/my_photos"/>
        <item
            android:id="@+id/nav_my_collection"
            android:checkable="false"
            android:icon="@mipmap/ic_collection"
            android:title="@string/my_collection"/>
    </group>

    <item android:title="@string/operate">
        <menu>
            <item
                android:id="@+id/nav_about_author"
                android:icon="@mipmap/ic_about"
                android:title="@string/about_author"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_exit"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>