<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_area_height"
            android:background="@drawable/img_nav_header">

            <com.zeroami.commonlib.widget.LCircleImageView
                android:id="@+id/cv_circle_avatar"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:src="@drawable/img_default_face"
                app:border_color="@color/windowBackground"
                app:border_width="@dimen/dp_1" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/username"
                android:textColor="@color/main_content_text_color_1"
                android:textSize="@dimen/dp_14" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:singleLine="true"
                android:text="@string/test_username"
                android:textColor="@color/main_content_text_color_1"
                android:textSize="@dimen/dp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/windowBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/nickname"
                android:textColor="@color/main_content_text_color_1"
                android:textSize="@dimen/dp_14" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:singleLine="true"
                android:text="@string/test_nickname"
                android:textColor="@color/main_content_text_color_1"
                android:textSize="@dimen/dp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/windowBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="个性签名"
                android:textColor="@color/main_content_text_color_1"
                android:textSize="@dimen/dp_14" />

            <TextView
                android:id="@+id/tv_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:text="@string/test_signature"
                android:textColor="@color/main_content_text_color_1"
                android:textSize="@dimen/dp_14" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_add_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_list_item"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:text="@string/add_friend"
            android:textColor="@color/main_content_text_color"
            android:textSize="@dimen/dp_14"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_list_item"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:text="@string/send_message"
            android:textColor="@color/main_content_text_color"
            android:textSize="@dimen/dp_14"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_delete_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_list_item"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:text="@string/delete_friend"
            android:textColor="@color/main_content_text_color"
            android:textSize="@dimen/dp_14"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_already_send_request_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:text="@string/already_send_add_request"
            android:textColor="@color/main_content_text_color"
            android:textSize="@dimen/dp_14"
            android:visibility="gone" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/test_title"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_18" />

        </android.support.v7.widget.Toolbar>
    </FrameLayout>
</FrameLayout>
