<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:background="@color/black_1"
        android:text="@string/test_time"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_12"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="40dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:gravity="right"
                android:text="@string/test_nickname"
                android:textColor="@color/main_content_text_color_1"
                android:textSize="@dimen/dp_12"/>
            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_chat_send"
                android:text="@string/test_message"
                android:textColor="@color/main_content_text_color_1"
                android:textSize="@dimen/dp_14"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/img_default_face"
            android:scaleType="centerCrop"/>
    </LinearLayout>
</LinearLayout>